Reordered CSS, added comments, and fix issue where step was set to flex instead of wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
   color: #39a6b2;
   font-family: Helvetica, Arial, sans-serif;
 }
+
+
+/* Header and Nav Styles Start */
 
 header {
   padding: 20px 35px;
@@ -19,9 +22,9 @@ header {
 
 header h1 {
   font-weight: bold;
-  font-size: 36px;
-  color: #fce138;
   margin: 0;
+  font-size: 36px;
+  color: #fce138;  
 }
 
 header a {
@@ -47,13 +50,17 @@ header nav ul li a {
   font-size: 1.55vw;
 }
 
+/* Header and Nav styles end */
+
+
+/* Footer styles start */
 footer {
   background: #fce138;
-  width: 100%;
   padding: 40px 35px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 footer h2 {
@@ -70,14 +77,16 @@ footer div {
 footer a {
   color: #024e76;
 }
+/* Footer Styles End */
 
+/* Section styles Start */
 section {
   padding: 60px;
 }  
 
-/* Hero Style Start */
+/* Hero Stylew Start */
 .hero {
-  background-image: url("../images/hero-bg.jpg");
+  background-image: url('../images/hero-bg.jpg');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -85,13 +94,27 @@ section {
   flex-wrap: wrap;
   align-items: flex-start;
 }
-/* Hero Style End */
+
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+}
 
 .hero-form {
-  color: #024e76;
+  border: 3px solid #024e76;
   background-color: #fce138;
-  border: solid 3px #024e76;
   padding: 20px;
+  color: #024e76;
   width: 40%;
   margin: 3.5%;
 }
@@ -126,24 +149,14 @@ section {
   padding: 10px 20px;
   font-size: 16px;
 }
+/* Hero Style End */
 
-.intro p {
-  line-height: 1.7;
-  color: #39a6b2;
-  width: 80%;
-  font-size: 20px;
-  margin: 0 auto;
-  text-align: center;
-}
 
-.steps {
-  background: #fce138;
-}
-
+/* Section title styles start */
 .section-title {
   font-size: 48px;
-  color: #024e76;
   border-bottom: 3px solid;
+  color: #024e76;
   padding-bottom: 20px;
   text-align: center;
   margin: 0 auto 35px auto;
@@ -157,29 +170,24 @@ section {
 .secondary-border {
   border-color: #39a6b2;
 }
-  
-.step h3 {
-  color: #024e76;
-  font-size: 46px;
-  flex: 1 30%;
-}
+/* Section title styles end */
 
-.step-info {
-  flex: 2 70%;
-  display: flex;
-  flex-wrap: flex;
-  align-items: center;
-}
-  
-.step-text {
+/* What we do styles start */
+
+.intro p {
+  line-height: 1.7;
   color: #39a6b2;
-  font-size: 18px;
+  width: 80%;
+  margin: 0 auto;
+  font-size: 20px;
+  text-align: center;
 }
+/* What we do styles end */
 
-.step-text h4 {
-  font-size: 26px;
-  line-height: 1.5;
-  color: #024e76;
+
+/* What you do styles start */
+.steps {
+  background: #fce138;
 }
 
 .step {
@@ -193,19 +201,46 @@ section {
   justify-content: space-between;
 }
 
+.step h3 {
+  color: #024e76;
+  font-size: 46px;
+  flex: 1 30%;
+}
+
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+  
 .step-img {
   flex: 1 12%;
   margin-right: 20px;
-}
-
-.step-text {
-  flex: 12;
 }
 
 .step-img img {
   max-width: 100%;
 }
 
+.step-text {
+  flex: 12;
+}
+
+.step-text {
+  color: #39a6b2;
+  font-size: 18px;
+}
+
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76;
+}
+
+/* What you do styles end */
+
+/* Meet the thrainers styles start */
 .trainers {
   width: 100%;
   margin: 0 auto;
@@ -215,11 +250,11 @@ section {
 }
 
 .trainer {
-  margin: 20px;
+  margin: 20px;  
+  flex: 1;
   background: #024e76;
   color: #fce138;
   overflow: auto;
-  flex: 1;
 }
 
 .trainer img {
@@ -244,18 +279,7 @@ section {
 .trainer-bio p {
   font-size: 17px;
 }
-
-.text-left {
-  text-align: left;
-}
-  
-.text-right {
-  text-align: right;
-}
-
-.flex-row {
-  display: flex;
-}
+/* Trainer Styles End */
 
 /* REACH OUT STYLES START */
 .contact {
@@ -268,11 +292,6 @@ section {
 
 .contact-info {
   display: flex;
-}
-
-.contact-info iframe {
-  height: 400px;
-  display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
@@ -280,6 +299,10 @@ section {
 .contact-info > * {
   flex: 1;
   margin: 15px;
+}
+
+.contact-info iframe {
+  height: 400px;
 }
 
 .contact-info div {
@@ -301,7 +324,7 @@ section {
 
 .contact-form input,
 .contact-form textarea {
-  order: 1px solid #024e76;
+  border: 1px solid #024e76;
   display: block;
   padding: 7px 15px;
   font-size: 16px;
@@ -324,21 +347,21 @@ section {
 .contact-info a {
   color: #fce138;
 }
+
+
 /* REACH OUT STYLES END */
 
-.hero-cta {
-  width: 35%;
+/* Utilities */
+.text-left {
+  text-align: left;
+}
+  
+.text-right {
   text-align: right;
-  margin: 3.5%;
-  color: #fff;
-  font-size: 18px;
-  line-height: 1.2;
 }
 
-.hero-cta h2 {
-  font-style:italic;
-  font-size: 55px;
-  color: #fce138;
+.flex-row {
+  display: flex;
 }
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
@@ -420,7 +443,6 @@ section {
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
-
   .hero-form button {
     width: 100%;
   }
